# plexi

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yaml
plexi_cli/: Cargo.toml  README.md
plexi_cli/src/: cli.rs  cmd.rs  main.rs  print.rs
plexi_core/: Cargo.toml
plexi_core/src/: auditor.rs  build.rs  crypto.rs  lib.rs  namespaces.rs
plexi_core/src/client/: mod.rs
plexi_core/src/proto/: mod.rs
plexi_core/src/proto/specs/: types.proto
plexi_core/tests/: test-vectors.json
