[workspace]

members = [
    "plexi_cli",
    "plexi_core"
]

resolver = "2"

[workspace.dependencies]
bincode = "2.0.0-rc.3"
ed25519-dalek = { version = "2" }
hex = { version = "0.4.3", features = ["serde"] }
serde = "1.0.203"
serde_json = "1.0.117"
uuid = { version = "1.8.0", features = ["v4", "serde"] }


[profile.release]
lto = true
strip = true
codegen-units = 1
