[workspace]
members = [
    "plexi_cli",
    "plexi_core"
]
resolver = "2"

[workspace.package]
version = "0.1.2"
authors = [
    "plexi-contributors", # utoipa only supports the first author as contact
    "Thibault Meunier <thibault@cloudflare.com>",
    "Fisher Darling <fisher@cloudflare.com>",
    "JP Borges <jborges@cloudflare.com>",
    "Lina Baquero <lina@cloudflare.com>",
    "Simon Newton <snewton@cloudflare.com>"
]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/cloudflare/plexi"
repository = "https://github.com/cloudflare/plexi"
keywords = ["key-transparency", "transparency", "e2ee", "auditor", "cryptography"]
categories = ["cryptography"]
license = "Apache-2.0"

[workspace.dependencies]
akd = { version = "0.11", default-features = false }
bincode = "2"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
colored = "2.1"
env_logger = { version = "0.11" }
ed25519-dalek = { version = "2" }
futures-util = "0.3"
getrandom = "0.2"
hex = { version = "0.4" }
log = "0.4"
prost = "0.13"
protobuf = "3.2"
reqwest = "0.12"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
thiserror = { version = "1.0" }
time = "0.3"
tokio = "1.0"
utoipa = "4"
uuid = { version = "1.9", features = ["v4", "serde"] }

# workspace dependencies
plexi-core = { version = "0.1", path = "./plexi_core" }

[profile.release]
lto = true
strip = true
codegen-units = 1
