[package]
name = "plexi_cli"
description = "A flexible auditor companion client"
version = "0.0.1"
authors = ["Thibault Meunier <thibault@cloudflare.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/cloudflare/plexi"
repository = "https://github.com/thibmeu/plexi"
keywords = ["transparency", "e2ee", "auditor", "cryptography", "cli"]
categories = ["cryptography"]
license = "Apache-2.0"

[[bin]]
name = "plexi"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
ed25519-dalek = { workspace = true }
env_logger = { workspace = true }
hex = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }

# workspace dependencies
plexi_core = { workspace = true }
