[package]
name = "plexi_cli"
description = "A flexible auditor companion client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "plexi"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
ed25519-dalek = { workspace = true }
env_logger = { workspace = true }
hex = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }

# workspace dependencies
plexi_core = { workspace = true }
