[package]
name = "plexi_cli"
description = "A flexible auditor companion client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "plexi"
path = "src/main.rs"

[dependencies]
akd = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["env"]}
clap-verbosity-flag = { workspace = true }
colored = { workspace = true }
ed25519-dalek = { workspace = true }
env_logger = { workspace = true }
hex = { workspace = true, features = ["serde"] }
log = { workspace = true }
protobuf = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true, features = ["formatting"] }
tokio = { workspace = true, features = ["full"] }

# workspace dependencies
plexi_core = { workspace = true, features = ["client"] }
