[package]
name = "plexi_core"
description = "A flexible auditor companion client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
build = "src/build.rs"

[features]
default = ["openapi"]
openapi = ["utoipa"]

[dependencies]
bincode = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true, features = ["serde"] }
prost = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
utoipa = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4", "serde"] }

[build-dependencies]
prost-build = { version = "0.13" }