[package]
name = "plexi-core"
description = "A flexible auditor companion client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
build = "src/build.rs"

[features]
default = ["openapi"]
auditor = ["akd", "akd/parallel_vrf", "akd/parallel_insert", "akd/experimental"]
client = ["auditor", "reqwest"]
openapi = ["utoipa"]

[dependencies]
akd = { workspace = true, features = ["whatsapp_v1", "public_auditing"], optional = true }
anyhow = { workspace = true }
bincode = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true, features = ["serde"] }
prost = { workspace = true }
protobuf = { workspace = true }
reqwest = { workspace = true, features = ["json", "native-tls"], optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
utoipa = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4", "serde"] }

# wasm32 dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
ed25519-dalek = { workspace = true, features = ["rand_core"] }
getrandom = { workspace = true, features = ["js"] }

[build-dependencies]
prost-build = { version = "0.13" }